--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "react-scripts test"
   },
   "dependencies": {
+    "@testing-library/dom": "^8.13.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
+    "@testing-library/user-event": "^14.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
